tests/sksl/errors/Ossfuzz27614.dsl.glsl
### Compilation failed:

error: type mismatch: '-' cannot operate on 'int', 'half2'

1 error
